--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,6 @@ jobs:
 
       - name: 'Build image '
         run: |
-          DOCKER_BUILDKIT=0 docker build . --tag ghcr.io/${{ github.actor }}/01-01-scratch:${BUILD_TAG} --tag ghcr.io/${{ github.actor }}/01-01-scratch:latest
-          docker push ghcr.io/${{ github.actor }}/01-01-scratch:${BUILD_TAG} 
-          docker push ghcr.io/${{ github.actor }}/01-01-scratch:latest
+          DOCKER_BUILDKIT=0 docker build . --tag ghcr.io/${{ github.actor }}/01-02-distroless:${BUILD_TAG} --tag ghcr.io/${{ github.actor }}/01-02-distroless:latest
+          docker push ghcr.io/${{ github.actor }}/01-02-distroless:${BUILD_TAG} 
+          docker push ghcr.io/${{ github.actor }}/01-02-distroless:latest
